--- a/Nurses-Analysis.ipynb
+++ b/Nurses-Analysis.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('C:\\\\Users\\\\LENOVO\\\\Downloads')"
+    "os.chdir('./data')"
    ]
   },
   {
