--- a/Nurses-Analysis.ipynb
+++ b/Nurses-Analysis.ipynb
@@ -245,7 +245,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "nurses_data = pd.read_excel(\"Nurses.xlsx\")\n",
+    "nurses_data = pd.read_excel(\"Nurses-Merged.csv\")\n",
     "nurses_data.head()"
    ]
   },
